--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
         <script language="javascript">
             onclick="window.open('http://www.website.com/page')" 
         </script>
+         <script src="https://www.gstatic.com/firebasejs/8.3.2/firebase-app.js"></script>
+         <script src="https://www.gstatic.com/firebasejs/8.3.2/firebase-auth.js"></script>
+         <script src="https://www.gstatic.com/firebasejs/8.3.2/firebase-analytics.js"></script>
+         <script src="firebase.js"></script>
         <style>
         body{ 
              background-image: url('images/blue.jpg');
@@ -94,14 +98,14 @@ Notesapp Login page
 <img src="/Notes App/images/login.png">
    <form action="/action_page.php" method="get" id="Loginform">
        
-         <label><b>Username</b></label>
-         <input type="text" placeholder="Enter Username" name="uname" required><br>
+         <label><b>EMAIL ID</b></label>
+         <input type="text" id="txtemail" placeholder="Enter E-mail ID" name="email" required><br>
          <label><b>Password</b></label>
-         <input type="password" placeholder="Enter Password" name="pswd" required><br>
-         <button type="submit" >Sign In</button>
-         <button type="button"onclick="window.open('file:///D:/Notes%20App/signupform.html')" >Sign Up</button>
+         <input type="password" id="txtpassword" placeholder="Enter Password" name="pswd" required><br>
+         <button type="button" id="btnSignin" onclick="signin()">Sign In</button>
+         <button type="button" onclick="window.open('file:///D:/Notes%20App/signupform.html')" >Sign Up</button>
        </div>
-      
    </form>
+  
     </body>
 </html>
