--- a/homepage.html
+++ b/homepage.html
@@ -107,7 +107,7 @@
     <header>
         <section>
             <nav class="navbar" style="background-color:rgb(68, 66, 66);">
-                <a href="file:///D:/Notes%20App/homepage.html"><i class="fa fa-home"> Home</i></a>
+                <a href="homepage.html"><i class="fa fa-home"> Home</i></a>
                 <button class ="btnmodal" id="myBtn">About</button>
                 <a  href="javascript:void(0)" class="dropbtn">Contact</a>
             </nav>
@@ -119,7 +119,7 @@
                 <div class="Note">
                     <h2>Here's the button to create new notes!!</h2>
                     <div id="container">
-                        <button class="btncreate" type="button" onclick="window.open('file:///D:/Notes%20App/addnotes.html')">CREATE NEW NOTE</button>
+                        <button class="btncreate" type="button" onclick="window.open('addnotes.html')">CREATE NEW NOTE</button>
                     </div>
             </main>
             <hr style="color: blanchedalmond; margin-left: 25%; margin-right: 25%;">
