--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@ Notesapp Login page
 <h1>Welcome To Notes App</h1>
 <div class="container">
 <h2>Login here</h2>
-<img src="/Notes App/images/login.png">
+<img src="images/login.png">
    <form action="/action_page.php" method="get" id="Loginform">
        
          <label><b>EMAIL ID</b></label>
@@ -103,7 +103,7 @@ Notesapp Login page
          <label><b>Password</b></label>
          <input type="password" id="txtpassword" placeholder="Enter Password" name="pswd" required><br>
          <button type="button" id="btnSignin" onclick="signin()">Sign In</button>
-         <button type="button" onclick="window.open('file:///D:/Notes%20App/signupform.html')" >Sign Up</button>
+         <button type="button" onclick="window.open('signupform.html')" >Sign Up</button>
        </div>
    </form>
   
