--- a/signupform.html
+++ b/signupform.html
@@ -105,7 +105,7 @@
             <label><b>Password</b></label><br>
             <input type="password" name="pswd" id="userPassword" required><br>
             <button type="button" id="btnSignup" onclick="signup()">Create Account</button>
-            <p>Already a member? Sign in: <a href="file:///D:/Notes%20App/index.html"><strong class="text-primary text-uppercase showSignInForm">Sign In</strong></a></p>
+            <p>Already a member? Sign in: <a href="index.html"><strong class="text-primary text-uppercase showSignInForm">Sign In</strong></a></p>
     </div>
     </div>
 
